--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 
 
 #root {
-  min-width: 480px;
-  max-width: 100vw;
-  display: block;
+  width: 100%;
+  min-width: 480px !important;
+  max-width: 100vw !important;
+  display: flex;
   justify-content: center ;
   /* min-width: 320px; */
   /* max-width: max-content;
